# swagger_server/models/role_update.py
@@ -15,30 +15,30 @@ class RoleUpdate(Model):
     Do not edit the class manually.
     """
 
-    def __init__(self, label: str=None, is_admin_role: bool=None, description: str=None):  # noqa: E501
+    def __init__(self, label: str=None, requires_2fa: bool=None, description: str=None):  # noqa: E501
         """RoleUpdate - a model defined in Swagger
 
         :param label: The label of this RoleUpdate.  # noqa: E501
         :type label: str
-        :param is_admin_role: The is_admin_role of this RoleUpdate.  # noqa: E501
-        :type is_admin_role: bool
+        :param requires_2fa: The requires_2fa of this RoleUpdate.  # noqa: E501
+        :type requires_2fa: bool
         :param description: The description of this RoleUpdate.  # noqa: E501
         :type description: str
         """
         self.swagger_types = {
             'label': str,
-            'is_admin_role': bool,
+            'requires_2fa': bool,
             'description': str
         }
 
         self.attribute_map = {
             'label': 'label',
-            'is_admin_role': 'is_admin_role',
+            'requires_2fa': 'requires_2fa',
             'description': 'description'
         }
 
         self._label = label
-        self._is_admin_role = is_admin_role
+        self._requires_2fa = requires_2fa
         self._description = description
 
     @classmethod
@@ -76,25 +76,25 @@ class RoleUpdate(Model):
         self._label = label
 
     @property
-    def is_admin_role(self) -> bool:
-        """Gets the is_admin_role of this RoleUpdate.
+    def requires_2fa(self) -> bool:
+        """Gets the requires_2fa of this RoleUpdate.
 
 
-        :return: The is_admin_role of this RoleUpdate.
+        :return: The requires_2fa of this RoleUpdate.
         :rtype: bool
         """
-        return self._is_admin_role
+        return self._requires_2fa
 
-    @is_admin_role.setter
-    def is_admin_role(self, is_admin_role: bool):
-        """Sets the is_admin_role of this RoleUpdate.
+    @requires_2fa.setter
+    def requires_2fa(self, requires_2fa: bool):
+        """Sets the requires_2fa of this RoleUpdate.
 
 
-        :param is_admin_role: The is_admin_role of this RoleUpdate.
-        :type is_admin_role: bool
+        :param requires_2fa: The requires_2fa of this RoleUpdate.
+        :type requires_2fa: bool
         """
 
-        self._is_admin_role = is_admin_role
+        self._requires_2fa = requires_2fa
 
     @property
     def description(self) -> str:
