# swagger_server/models/user_site_data_create.py
@@ -15,35 +15,40 @@ class UserSiteDataCreate(Model):
     Do not edit the class manually.
     """
 
-    def __init__(self, user_id: str=None, site_id: int=None, data_processing_consent_provided: bool=None, data: object=None):  # noqa: E501
+    def __init__(self, user_id: str=None, site_id: int=None, consented_at: date=None, blocked: bool=None, data: object=None):  # noqa: E501
         """UserSiteDataCreate - a model defined in Swagger
 
         :param user_id: The user_id of this UserSiteDataCreate.  # noqa: E501
         :type user_id: str
         :param site_id: The site_id of this UserSiteDataCreate.  # noqa: E501
         :type site_id: int
-        :param data_processing_consent_provided: The data_processing_consent_provided of this UserSiteDataCreate.  # noqa: E501
-        :type data_processing_consent_provided: bool
+        :param consented_at: The consented_at of this UserSiteDataCreate.  # noqa: E501
+        :type consented_at: date
+        :param blocked: The blocked of this UserSiteDataCreate.  # noqa: E501
+        :type blocked: bool
         :param data: The data of this UserSiteDataCreate.  # noqa: E501
         :type data: object
         """
         self.swagger_types = {
             'user_id': str,
             'site_id': int,
-            'data_processing_consent_provided': bool,
+            'consented_at': date,
+            'blocked': bool,
             'data': object
         }
 
         self.attribute_map = {
             'user_id': 'user_id',
             'site_id': 'site_id',
-            'data_processing_consent_provided': 'data_processing_consent_provided',
+            'consented_at': 'consented_at',
+            'blocked': 'blocked',
             'data': 'data'
         }
 
         self._user_id = user_id
         self._site_id = site_id
-        self._data_processing_consent_provided = data_processing_consent_provided
+        self._consented_at = consented_at
+        self._blocked = blocked
         self._data = data
 
     @classmethod
@@ -104,27 +109,46 @@ class UserSiteDataCreate(Model):
         self._site_id = site_id
 
     @property
-    def data_processing_consent_provided(self) -> bool:
-        """Gets the data_processing_consent_provided of this UserSiteDataCreate.
+    def consented_at(self) -> date:
+        """Gets the consented_at of this UserSiteDataCreate.
 
 
-        :return: The data_processing_consent_provided of this UserSiteDataCreate.
+        :return: The consented_at of this UserSiteDataCreate.
+        :rtype: date
+        """
+        return self._consented_at
+
+    @consented_at.setter
+    def consented_at(self, consented_at: date):
+        """Sets the consented_at of this UserSiteDataCreate.
+
+
+        :param consented_at: The consented_at of this UserSiteDataCreate.
+        :type consented_at: date
+        """
+
+        self._consented_at = consented_at
+
+    @property
+    def blocked(self) -> bool:
+        """Gets the blocked of this UserSiteDataCreate.
+
+
+        :return: The blocked of this UserSiteDataCreate.
         :rtype: bool
         """
-        return self._data_processing_consent_provided
+        return self._blocked
 
-    @data_processing_consent_provided.setter
-    def data_processing_consent_provided(self, data_processing_consent_provided: bool):
-        """Sets the data_processing_consent_provided of this UserSiteDataCreate.
+    @blocked.setter
+    def blocked(self, blocked: bool):
+        """Sets the blocked of this UserSiteDataCreate.
 
 
-        :param data_processing_consent_provided: The data_processing_consent_provided of this UserSiteDataCreate.
-        :type data_processing_consent_provided: bool
+        :param blocked: The blocked of this UserSiteDataCreate.
+        :type blocked: bool
         """
-        if data_processing_consent_provided is None:
-            raise ValueError("Invalid value for `data_processing_consent_provided`, must not be `None`")  # noqa: E501
 
-        self._data_processing_consent_provided = data_processing_consent_provided
+        self._blocked = blocked
 
     @property
     def data(self) -> object:
